@@ -46,32 +46,42 @@ spyColors = numpy.array([[  0,   0,   0],
                    [255,   0,   0],
                    [  0, 255,   0],
                    [  0,   0, 255],
-                   [255, 255,   0],
+		   [255, 255,   0],
                    [255,   0, 255],
                    [  0, 255, 255],
-                   [255, 170,   0],
-                   [ 50, 170,   0],
-                   [170, 170,   0],
-                   [170,   0, 255],
-                   [200, 200, 200],
-                   [  0, 200, 200],
-                   [170,   0, 170],
-                   [100, 175, 255],
-                   [255, 175, 175],
-                   [255, 175, 255],
-                   [255, 255, 255],
-                   [255, 255, 255],
-                   [255, 255, 255],
-                   [255, 255, 255],
-                   [255, 255, 255],
-                   [255, 255, 255],
-                   [255, 255, 255],
-                   [255, 255, 255],
-                   [255, 255, 255],
-                   [255, 255, 255],
-                   [255, 255, 255],
-                   [255, 255, 255],
-                   [255, 255, 255]], numpy.int)
+                   [200, 100,   0],
+                   [  0, 200, 100],
+                   [100,   0, 200],
+                   [200,   0, 100],
+                   [100, 200,   0],
+                   [  0, 100, 200],
+                   [150,  75,  75],
+                   [ 75, 150,  75],
+                   [ 75,  75, 150],
+                   [255, 100, 100],
+                   [100, 255, 100],
+                   [100, 100, 255],
+                   [255, 150,  75],
+                   [ 75, 255, 150],
+                   [150,  75, 255],
+		   [ 50,  50,  50],
+		   [100, 100, 100],
+		   [150, 150, 150],
+		   [200, 200, 200],
+		   [250, 250, 250],
+		   [100,   0,   0],
+		   [200,   0,   0],
+		   [  0, 100,   0],
+		   [  0, 200,   0],
+		   [  0,   0, 100],
+		   [  0,   0, 200],
+		   [100, 100,   0],
+		   [200, 200,   0],
+		   [100,   0, 100],
+		   [200,   0, 200],
+		   [  0, 100, 100],
+		   [  0, 200, 200]], numpy.int)
+
 
 class BandInfo:
     '''Data characterizing the spectral bands associated with an image.'''
